@@ -3,6 +3,8 @@
        resizing the dialog. (Stefan)
 - CHG: splitter positions saved separately
        for log dialog and project monitor. (Stefan)
+- CHG: Restored files get their last-write-time
+       set to the current time. (Stefan)
 
 Version 1.10.1
 - BUG: Wrong texts in conflict resolving
